kubernetes/blackbox-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbox-exporter
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blackbox-exporter
  template:
    metadata:
      labels:
        app: blackbox-exporter
    spec:
      containers:
      - name: blackbox-exporter
        image: prom/blackbox-exporter:latest
        ports:
        - containerPort: 9115
        volumeMounts:
        - mountPath: /etc/prometheus
          name: prometheus-blackbox-config
          readOnly: true
      volumes:
      - name: prometheus-blackbox-config
        configMap:
          name: prometheus-blackbox-config

---
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter
  namespace: monitoring
spec:
  ports:
    - port: 9115
      targetPort: 9115
  selector:
    app: blackbox-exporter
